Refactor entity classes to extend BaseEntity and remove timestamp fields
- Updated Subject, Submission, TeacherProfile, TopicLearningMaterial, Transaction, User, Wallet entities to extend BaseEntity.
- Removed createdAt and updatedAt fields along with their associated prePersist and preUpdate methods.
- Added appropriate annotations and relationships in the affected entities.
- Adjusted User and Wallet entities to include new fields for createdBy and updatedBy.
- Refactored AuthenticationServiceImpl, UserServiceImpl, and other service classes to align with the new entity structure.